--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.simgesengun.sayitahmini"
+        applicationId "com.simgesengun.guessnumber"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
